--- a/d3js_projects/coursera_prj1/index.html
+++ b/d3js_projects/coursera_prj1/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="../d3.min.js"></script>
+    <script src="data/ExcelFormattedGISTEMPData2JS.js"></script>
+    <script src="../d3.min.js"></script>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <div id="svg-draw">
