--- a/d3js_projects/svg_try/index.html
+++ b/d3js_projects/svg_try/index.html
@@ -2,22 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="../d3.min.js"></script>
+    <title>SVG Try: Change ME!</title>
+    <script src="../d3.min.js"></script>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
+
     <div id="draw">
-      <svg width="100" height="100">
-        <path d="M 10 25
-                 L 10 75
-                 L 60 75
-                 Z"
-              stroke="red"
-              stroke-width="2"
-              fill="none"
-        />
+      <svg width="800" height="600">
       </svg>
     </div>
 
-    <script type="text/javascript" src="main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
